--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ matplotlib
 scikit-image
 scikit-video
 opencv-python
+torch
+torchvision
 git+https://github.com/mattloper/chumpy.git
 git+https://github.com/mkocabas/yolov3-pytorch.git
 git+https://github.com/mkocabas/multi-person-tracker.git
