--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-tqdm
-numpy
-scipy
-numba
-smplx
-gdown
-joblib
+tqdm==4.28.1
+numpy==1.17.5
+scipy==1.4.1
+numba==0.47.0
+smplx==0.1.13
+gdown==3.6.4
+joblib==0.14.1
 pytube==9.5.3
-trimesh
-pyrender
-progress
-filterpy
-matplotlib
-torchvision
-scikit-image
-scikit-video
+trimesh==3.5.25
+pyrender==0.1.36
+progress==1.5
+filterpy==1.4.5
+matplotlib==3.1.3
+torchvision==0.5.0
+scikit-image==0.16.2
+scikit-video==1.1.11
 pillow==6.2.1
-opencv-python
+opencv-python==4.1.2.30
 git+https://github.com/mattloper/chumpy.git
 git+https://github.com/mkocabas/yolov3-pytorch.git
 git+https://github.com/mkocabas/multi-person-tracker.git
